<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

                <TextView
                    android:fontFamily="Roboto"
                    android:gravity="center"
                    android:text="@string/extend_meeting"
                    android:textSize="20sp"
                    android:layout_width="600dp"
                    android:layout_height="50dp"/>

                <RadioGroup
                    android:id="@+id/rg_book_now"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="600dp"
                    android:layout_height="80dp">

                        <RadioButton
                            android:background="@drawable/border_only"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@+id/bt_extend_fifteen"
                            android:text="@string/extend_fifteen"
                            android:button="@android:color/transparent"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"/>
                        <RadioButton
                            android:background="@drawable/border_only"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@+id/bt_extend_thirty"
                            android:text="@string/extend_thirty"
                            android:button="@android:color/transparent"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"/>
                        <RadioButton
                            android:button="@android:color/transparent"
                            android:background="@drawable/border_only"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@+id/bt_extend_four_five"
                            android:text="@string/extend_four_five"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"/>
                        <RadioButton
                            android:button="@android:color/transparent"
                            android:background="@drawable/border_background_gray"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:id="@+id/bt_extend_sixty"
                            android:text="@string/extend_sixty"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"/>
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/ll_extend_meeting"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="600dp"
                    android:layout_height="80dp">

                        <TextView
                            android:fontFamily="Roboto"
                            android:background="@drawable/border_background_gray"
                            android:gravity="center"
                            android:id="@+id/bt_extend_confirm"
                            android:text="@string/extend_confirm"
                            android:textSize="20sp"
                            android:layout_width="200dp"
                            android:layout_height="50dp"/>
                        <TextView
                            android:fontFamily="Roboto"
                            android:layout_marginLeft="50dp"
                            android:background="@drawable/border_only"
                            android:gravity="center"
                            android:id="@+id/bt_extend_cancel"
                            android:text="@string/extend_cancel"
                            android:textSize="20sp"
                            android:layout_width="200dp"
                            android:layout_height="50dp"/>
                </LinearLayout>

</LinearLayout>


